<resources>
    <string name="app_name">ProyectoDam</string>
    <string name="contrase_a_m_nimo_6_d_gitos">Contraseña, mínimo 6 dígitos</string>
    <string name="email">Email</string>
    <string name="registrar">REGISTRAR</string>
    <string name="entrar">ENTRAR</string>
    <string name="cerrar_sesi_n">CERRAR SESIÓN</string>
    <string name="proveedor">Proveedor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="borrar">BORRAR</string>
    <string name="volver">VOLVER</string>
    <string name="buscar">BUSCAR</string>
    <string name="guardar">GUARDAR</string>
    <string name="a_adir_pacientes">AÑADIR PACIENTES</string>
</resources>