<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".AuthActivity" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/email" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <EditText
            android:id="@+id/adressTextView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="Nombre completo" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <EditText
            android:id="@+id/phoneTextView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:hint="Edad" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/date2TextView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="Cita 1: hora y consulta" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <EditText
            android:id="@+id/hospital2TextView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:hint="Hospital 1" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/date3TextView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="Cita 2: hora y consulta" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <EditText
            android:id="@+id/hospital3TextView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:hint="Hospital2" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/saveButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:text="@string/guardar"
                android:textColor="@color/white" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/getButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#FF5C00"
                android:text="@string/buscar"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#03A9F4"
                android:text="@string/borrar"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/logOutButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/teal_700"
                android:text="@string/volver"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>